[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
derive_more = "0.99.17"
itertools = "0.12.0"
lazy_static = "1.4.0"
smallvec = "1.11.2"
rayon = "1.8.0"
num = "0.4.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3